# quicktune

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
archive/: dyhpo_optimizer.py
archive/data/: tensor_mds_test.py  tensormetadataset.py
archive/metatrain/: cost_mt_test.py  perf_mt_test.py
examples/: meta_train_optimizer.py  meta_train_surrogate.py  quicktuning.py
examples/configuration/: mtlbm.py
examples/extended/: cost_predictor.pt  dyhpo.pt  dyhpo.pth  model.pt
examples/micro/: cost_predictor.pt  dyhpo.pt  model.pt
examples/mini/: cost_predictor.pt  dyhpo.pt  model.pt
pretrained/mini/: config.yaml
scripts/: info_dict.json  test.py
scripts/exp/: info_dict.json  perf_curves.json
src/quicktune/: __init__.py  factory.py  utils.py
src/quicktune/config_manager/: __init__.py  factory.py  manager.py
src/quicktune/configs/: __init__.py
src/quicktune/configuration/: __init__.py  manager.py  space.py
src/quicktune/configuration_manager/: __init__.py  configuration_manager.py  factory.py
src/quicktune/data/: __init__.py  dataloader.py  factory.py  metaloader.py  metaset.py
src/quicktune/finetune/: finetune.py  finetune_func.py  finetune_subprocess.py  finetune_wrapper.py
src/quicktune/optimizers/: __init__.py  bo.py  cost_metalearner.py  dyhpo.py  factory.py  gp.py  meta.py  performance_metalearner.py  quick.py  quickoptimizer.py  quicktune.py  random.py  utils.py
src/quicktune/tools/: __init__.py  metadataset.py  searchspace.py
src/quicktune/tuners/: __init__.py  quicktune.py  quicktuner.py
src/quicktune/utils/: log_utils.py  setup.py  (+2 more)
(+39 files in other folders)
